# AI-Personal-Finance-Assistant

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.streamlit/: config.toml
core/: clustering.py  features.py  llm.py  merchants.py  parser.py
data/: spending_demo.csv
docs/: DESIGN.md  PLAN.md  merchant-habits-design.md  merchant-habits-plan.md
tests/: conftest.py  test_clustering.py  test_features.py  test_llm.py  test_merchants.py  test_parser.py
