[project]
name = "ai-personal-finance-assistant"
version = "0.1.0"
description = "Personal finance spending-pattern dashboard for OpenAI Build Week 2026."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fpdf2>=2.7",
    "kaleido>=0.2.1",
    "openai>=1.40",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "plotly>=5.22",
    "scikit-learn>=1.5",
    "streamlit>=1.36",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
